UserRepositoy를 Map으로 관리하도록 변경, equals메소드 StringUtils사용하도록 변경